# api-definition/api-definition.yaml
@@ -852,18 +852,18 @@ paths:
   /conversation/{conversationId}:
     get:
       summary: Get conversation by id.
-      operationId: getConversationMessages
+      operationId: getConversationDetails
       tags:
         - conversation
       responses:
         "200":
-          description: A list of messages in a conversation
+          description: Details of conversation by id
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/conversation_messages"
+                  $ref: "#/components/schemas/conversations"
         "400":
           description: Error object.
           content:
@@ -925,6 +925,34 @@ paths:
             type: string
           required: true
 
+  /conversation/{conversationId}/messages:
+    get:
+      summary: Get messages by conversation id.
+      operationId: getConversationMessages
+      tags:
+        - conversation
+      responses:
+        "200":
+          description: Messages matching the conversation Id
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/conversation_messages"
+        "400":
+          description: Error object.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/errorResponse"
+      parameters:
+        - name: conversationId
+          required: true
+          in: path
+          schema:
+            type: string
+
   /conversation/{conversationId}/{messageId}:
     put:
       summary: Edit message in a conversation
@@ -982,4 +1010,3 @@ paths:
           schema:
             type: string
           required: true
-
