# backend/src/controllers/conversationHandlers.ts
@@ -7,23 +7,22 @@ import { Request, Response } from "express";
 import * as queries from "../services/conversationQueries";
 import { Context } from "openapi-backend";
 
-import { PrismaClientKnownRequestError } from "@prisma/client/runtime/library";
-
 export async function getUserConversations(
   c: Context,
   _req: Request,
   res: Response
 ) {
-
   const userId = c.request.params.userId;
 
-  if (typeof userId !== "string"){ 
-    res.status(401).json({message: "Invalid parametres"});
+  if (typeof userId !== "string") {
+    res.status(401).json({ message: "Invalid parametres" });
     return;
   }
-  
+
   try {
-    const conversations = await queries.selectConversations({user_id: userId});
+    const conversations = await queries.selectConversations({
+      user_id: userId
+    });
     res.status(200).json(conversations);
   } catch (e) {
     console.log(e);
@@ -39,10 +38,13 @@ export async function createConversation(
   res: Response
 ) {
   const newConversation = c.request.body;
-  const date = new Date (Date.now()).toISOString();
+  const date = new Date(Date.now()).toISOString();
   console.log(newConversation);
   try {
-    const responseConversation = await queries.createConversation({...newConversation, timestamp: date});
+    const responseConversation = await queries.createConversation({
+      ...newConversation,
+      timestamp: date
+    });
     res.status(200).json(responseConversation);
   } catch (e) {
     console.log(e);
@@ -59,13 +61,41 @@ export async function getConversation(
 ) {
   const conversationId = c.request.params.conversationId;
 
-  if (typeof conversationId !== "string"){ 
-    res.status(401).json({message: "Invalid parametres"});
+  if (typeof conversationId !== "string") {
+    res.status(401).json({ message: "Invalid parametres" });
     return;
   }
 
   try {
-    const conversation = await queries.selectConversation({id: parseInt(conversationId)});
+    const conversation = await queries.selectConversation({
+      id: parseInt(conversationId)
+    });
+    console.log(conversation);
+    res.status(200).json(conversation);
+  } catch (e) {
+    console.log(e);
+    res
+      .status(500)
+      .json({ status: 500, err: [{ message: "Unidentified error" }] });
+  }
+}
+
+export async function getConversationMessages(
+  c: Context,
+  _req: Request,
+  res: Response
+) {
+  const conversationId = c.request.params.conversationId;
+
+  if (typeof conversationId !== "string") {
+    res.status(401).json({ message: "Invalid parametres" });
+    return;
+  }
+
+  try {
+    const conversation = await queries.selectMessages({
+      conversation_id: parseInt(conversationId)
+    });
     console.log(conversation);
     res.status(200).json(conversation);
   } catch (e) {
@@ -81,17 +111,22 @@ export async function deleteConversation(
   _req: Request,
   res: Response
 ) {
-  const conversationId = c.request.params.conversationId
+  const conversationId = c.request.params.conversationId;
 
-  if (typeof conversationId !== "string"){ 
-    res.status(401).json({message: "Invalid parametres"});
+  if (typeof conversationId !== "string") {
+    res.status(401).json({ message: "Invalid parametres" });
     return;
   }
 
   try {
-    const messages = await queries.selectMessages({conversation_id: parseInt(conversationId)});
-    messages.length > 0 && messages.forEach(async message => await queries.deleteMessage({id: message.id}));
-    await queries.deleteConversation({id: parseInt(conversationId)});
+    const messages = await queries.selectMessages({
+      conversation_id: parseInt(conversationId)
+    });
+    messages.length > 0 &&
+      messages.forEach(
+        async (message) => await queries.deleteMessage({ id: message.id })
+      );
+    await queries.deleteConversation({ id: parseInt(conversationId) });
     res.status(200).json({ status: 200, itemId: conversationId });
   } catch (e) {
     console.log(e);
@@ -102,13 +137,13 @@ export async function deleteConversation(
 }
 
 export async function postMessage(c: Context, _req: Request, res: Response) {
-  res.json({status: 201});
+  res.json({ status: 201 });
 }
 
 export async function editMessage(c: Context, _req: Request, res: Response) {
-  res.json({status: 201});
+  res.json({ status: 201 });
 }
 
 export async function deleteMessage(c: Context, _req: Request, res: Response) {
-  res.json({status: 201});
+  res.json({ status: 201 });
 }
